--- a/book-en/references.bib
+++ b/book-en/references.bib
@@ -83,3 +83,65 @@
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
+
+@inbook{verneaux1973,
+	author = {{Verneaux}, {J.}},
+	year = {1973},
+	date = {1973},
+	pages = {257},
+	series = {Essai de biotypologie},
+	volume = {Thèse d'état},
+	address = {Besançon}
+}
+
+@article{legendre2001,
+	title = {Ecologically meaningful transformations for ordination of species data},
+	author = {{Legendre}, {Pierre} and {Gallagher}, {Eugene D.}},
+	year = {2001},
+	month = {10},
+	date = {2001-10-01},
+	journal = {Oecologia},
+	pages = {271--280},
+	volume = {129},
+	number = {2},
+	doi = {10.1007/s004420100716},
+	url = {https://doi.org/10.1007/s004420100716},
+	langid = {en}
+}
+
+@book{borcard2011,
+	title = {Numerical Ecology with R},
+	author = {{Borcard}, {Daniel} and {Gillet}, {François} and {Legendre}, {Pierre}},
+	year = {2011},
+	date = {2011},
+	publisher = {Springer-Verlag},
+	series = {Use R!},
+	doi = {10.1007/978-1-4419-7976-6},
+	url = {https://www.springer.com/gp/book/9781441979766},
+	note = {DOI: 10.1007/978-1-4419-7976-6},
+	address = {New York},
+	langid = {en}
+}
+
+@article{rao1964,
+	title = {The Use and Interpretation of Principal Component Analysis in Applied Research},
+	author = {{Rao}, {C. Radhakrishna}},
+	year = {1964},
+	date = {1964},
+	journal = {Sankhy{\={a}}: The Indian Journal of Statistics, Series A (1961-2002)},
+	pages = {329--358},
+	volume = {26},
+	number = {4},
+	url = {https://www.jstor.org/stable/25049339},
+	note = {Publisher: Springer}
+}
+
+@book{legendre2012,
+	title = {Numerical Ecology},
+	author = {{Legendre}, {P.} and {Legendre}, {Louis}},
+	year = {2012},
+	month = {07},
+	date = {2012-07-21},
+	publisher = {Elsevier},
+	langid = {en}
+}
