First edits to match book and presentation content
change installation of packages to true

--- a/book-en/01-preparing-for-the-workshop.Rmd
+++ b/book-en/01-preparing-for-the-workshop.Rmd
@@ -34,7 +34,7 @@ You should also make sure you have downloaded, installed, and loaded these packa
 * [ggplot2](https://cran.r-project.org/package=ggplot2) (for plotting some results)
 
 
-```{r, echo = TRUE, eval = FALSE}
+```{r, echo = TRUE, eval = TRUE}
 # Install the required packages
 install.packages("vegan")
 install.packages("labdsv")
